<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/nav_edit_note"
        android:name="com.montesdiether.myapplication.ui.MusicLibrary.EditMusicFragment"
        android:label="Edit Notes"
        tools:layout="@layout/fragment_edit_note" />
    <fragment
        android:id="@+id/nav_add_note"
        android:name="com.montesdiether.myapplication.ui.MusicLibrary.AddNoteFragment"
        android:label="Add Notes"
        tools:layout="@layout/fragment_add_note" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.montesdiether.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.montesdiether.myapplication.ui.MusicLibrary.NotesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.montesdiether.myapplication.ui.Settings.Setting_Fragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>